fixed horizontal scroll issue

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,6 @@ ORDER: Base + typography > general layout + grid > page layout > components
 1em = 16px
 */
 .sponsors {
-  width: 100vw;
   background-color: black; }
   .sponsors__head {
     text-align: center;
